--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
   <title>수면공감</title>
 </head>
 <body>
-  
+
+	<!--//header start-->
+  <header id="header">
+		<div class="container">
+			<div class="row">
+				<div class="header">
+					<h2 class="ir_su">메뉴와 로고</h2>
+					<h4><strong>수면공감</strong> 편안한 밤</h4>
+					<div class="logo">
+					<a href="index.html">
+						<img src="img/logo.png" alt="자주">
+					</a>
+						
+					</div>				
+					<div class="ham_btn">
+						<div class="ham">
+							<span></span>
+							<span></span>
+							<span></span>
+						</div>
+						<span>menu</span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+	<!--//header end-->
 </body>
 </html>
