메뉴 마크업

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<h4><strong>수면공감</strong> 편안한 밤</h4>
 					<div class="logo">
 					<a href="index.html">
-						<img src="img/logo.png" alt="자주">
+						<img src="img/logo.png" alt="수면공감">
 					</a>
 						
 					</div>				
