--- a/index.html
+++ b/index.html
@@ -34,5 +34,16 @@
 		</div>
 	</header>
 	<!--//header end-->
+
+  <nav id="Nav">
+		<ul class="menu">
+			<li><a href="#">베개</a></li>
+			<li><a href="#">침구</a></li>
+			<li><a href="#">토퍼</a></li>
+			<li><a href="#">베이비&키즈</a></li>
+		</ul>
+	</nav>
+	<!--//mNav-->
+
 </body>
 </html>
