--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 	</header>
 	<!--//header end-->
 
+
+	<!--//Nav start-->
   <nav id="Nav">
 		<ul class="menu">
 			<li><a href="#">베개</a></li>
@@ -43,7 +45,16 @@
 			<li><a href="#">베이비&키즈</a></li>
 		</ul>
 	</nav>
-	<!--//mNav-->
+	<!--//Nav end-->
+
+
+	<!--//main start-->
+	<main>
+		<h2 class="ir_su">비디오</h2>
+		<video src="vieeo/video.mp4" autoplay muted loop></video>
+		<div class="text"></div>	
+	</main>
+	<!--//main end-->
 
 </body>
 </html>
