--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<!--//main start-->
 	<main>
 		<h2 class="ir_su">비디오</h2>
-		<video src="vieeo/video.mp4" autoplay muted loop></video>
+		<video src="video/video.mp4" autoplay muted loop></video>
 		<div class="text"></div>	
 	</main>
 	<!--//main end-->
