--- a/index.html
+++ b/index.html
@@ -56,5 +56,182 @@
 	</main>
 	<!--//main end-->
 
+
+	<!--//best start-->
+	<section id="best" class="contents">
+		<div class="container">
+			<div class="row">
+				<div class="best section1">
+					<h2>BEST ITEM</h2>
+					<div class="slider">
+						<div class="swiper-container">
+							<div class="swiper-wrapper">
+                <div class="swiper-slide">
+									<div class="item">
+										<figure>
+											<img src="img/best_item_01.jpeg" alt="우유베개">
+											<figcaption>
+												<span>
+													우유베개<br>
+													<strong>
+														124,000<span>원</span>
+													</strong>
+												</span>
+											</figcaption>
+										</figure>
+									</div><!--item-->
+                </div><!--swiper-slide-->
+                <div class="swiper-slide">
+									<div class="item">
+										<figure>
+											<img src="img/best_item_02.jpeg" alt="우유베개 알파">
+											<figcaption>
+												<span>
+													우유베개 알파<br>
+													<strong>
+														149,000<span>원</span>
+													</strong>
+												</span>
+											</figcaption>
+										</figure>
+									</div><!--item-->
+                </div><!--swiper-slide-->
+                <div class="swiper-slide">
+									<div class="item">
+										<figure>
+											<img src="img/best_item_03.jpeg" alt="알러지케어 항균 차렵이불/패드">
+											<figcaption>
+												<span>
+													알러지케어 항균 차렵이불/패드<br>
+													<strong>
+														89,000<span>원</span>
+													</strong>
+												</span>
+											</figcaption>
+										</figure>
+									</div><!--item-->
+                </div><!--swiper-slide-->
+                <div class="swiper-slide">
+									<div class="item">
+										<figure>
+											<img src="img/best_item_04.jpeg" alt="사이베개">
+											<figcaption>
+												<span>
+													사이베개<br>
+													<strong>
+														41,000<span>원</span>
+													</strong>
+												</span>
+											</figcaption>
+										</figure>
+									</div><!--item-->
+                </div><!--swiper-slide-->
+                <div class="swiper-slide">
+									<div class="item">
+										<figure>
+											<img src="img/best_item_05.jpeg" alt="알러지케어 히트웜 이불/패드">
+											<figcaption>
+												<span>
+													알러지케어 히트웜 이불/패드<br>
+													<strong>
+														160,000<span>원</span>
+													</strong>
+												</span>
+											</figcaption>
+										</figure>
+									</div><!--item-->
+                </div><!--swiper-slide-->
+                <div class="swiper-slide">
+									<div class="item">
+										<figure>
+											<img src="img/best_item_01.jpeg" alt="우유베개">
+											<figcaption>
+												<span>
+													우유베개<br>
+													<strong>
+														124,000<span>원</span>
+													</strong>
+												</span>
+											</figcaption>
+										</figure>
+									</div><!--item-->
+                </div><!--swiper-slide-->
+                <div class="swiper-slide">
+									<div class="item">
+										<figure>
+											<img src="img/best_item_02.jpeg" alt="우유베개 알파">
+											<figcaption>
+												<span>
+													우유베개 알파<br>
+													<strong>
+														149,000<span>원</span>
+													</strong>
+												</span>
+											</figcaption>
+										</figure>
+									</div><!--item-->
+                </div><!--swiper-slide-->
+                <div class="swiper-slide">
+									<div class="item">
+										<figure>
+											<img src="img/best_item_03.jpeg" alt="알러지케어 항균 차렵이불/패드">
+											<figcaption>
+												<span>
+													알러지케어 항균 차렵이불/패드<br>
+													<strong>
+														89,000<span>원</span>
+													</strong>
+												</span>
+											</figcaption>
+										</figure>
+									</div><!--item-->
+                </div><!--swiper-slide-->
+                <div class="swiper-slide">
+									<div class="item">
+										<figure>
+											<img src="img/best_item_04.jpeg" alt="사이베개">
+											<figcaption>
+												<span>
+													사이베개<br>
+													<strong>
+														41,000<span>원</span>
+													</strong>
+												</span>
+											</figcaption>
+										</figure>
+									</div><!--item-->
+                </div><!--swiper-slide-->
+                <div class="swiper-slide">
+									<div class="item">
+										<figure>
+											<img src="img/best_item_05.jpeg" alt="알러지케어 히트웜 이불/패드">
+											<figcaption>
+												<span>
+													알러지케어 히트웜 이불/패드<br>
+													<strong>
+														160,000<span>원</span>
+													</strong>
+												</span>
+											</figcaption>
+										</figure>
+									</div><!--item-->
+                </div><!--swiper-slide-->
+							</div>
+							<div class="swiper-button-prev"></div>
+							<div class="swiper-button-next"></div> 
+						</div>
+          </div>
+          <div class="banner">
+						<a href="index.html">
+							<img src="img/logo.png" alt="수면공감 로고">
+						</a>
+            <span>수면공감이 모든 분들의 편안한 밤을 책임지겠습니다.</span>
+          </div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--//best end-->
+
 </body>
 </html>
