--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>수면공감</title>
+	<link rel="stylesheet" href="css/swiper.css">
 </head>
 <body>
 
@@ -232,6 +233,14 @@
 		</div>
 	</section>
 	<!--//best end-->
+
+
+
+
+  <!--script-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	<script src="js/swiper.min.js"></script>
 
 </body>
 </html>
