스타일시트

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <title>수면공감</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/swiper.css">
+	<link rel="stylesheet" href="css/style.css">
+	<!--script-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	<script defer src="js/swiper.min.js"></script>
 </head>
 <body>
 
@@ -236,12 +241,6 @@
 	<!--//best end-->
 
 
-
-
-  <!--script-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-	<script src="js/swiper.min.js"></script>
 
 </body>
 </html>
