--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/swiper.css">
 	<link rel="stylesheet" href="css/style.css">
-	<!--script-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-	<script defer src="js/swiper.min.js"></script>
 </head>
 <body>
+	
+	<div id="top">
+		<a href="#">top</a>
+	</div>
+	<!--//top버튼-->
 
 	<!--//header start-->
   <header id="header">
@@ -241,6 +242,11 @@
 	<!--//best end-->
 
 
+<!--script-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+<script src="js/swiper.min.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
