new 상품 마크업

--- a/index.html
+++ b/index.html
@@ -242,6 +242,71 @@
 	</section>
 	<!--//best end-->
 
+	<!-- //new start -->
+
+	<section id="new" class="contents">
+		<div class="container">
+			<div class="row">
+				<div class="new section2">
+					<h2>new arrials.</h2>
+					<div class="new_item">
+						<figure>	
+								<img src="img/new_item_01.jpeg" alt="알러지케어 히트웜 이불/패드">
+							<figcaption>
+								<p>
+									<strong>[수면공감] 알러지케어 히트웜 이불/패드</strong><br>
+									내 체온으로 5도 더 따뜻하게<br>
+									자가발열 알러지케어 HEAT WARM
+									<span><em>98,000</em><span>원</span></span>
+								</p>
+							</figcaption>
+						</figure>
+					</div>
+					<div class="new_item">
+						<figure>	
+								<img src="img/new_item_02.jpeg" alt="알러지케어 항균 차렵이불/패드">
+							<figcaption>
+								<p>
+									<strong>[수면공감] 알러지케어 항균 차렵이불/패드 Peach skin</strong><br>
+									집먼지 진드기 완/벽/차/단<br>
+									항균 99.9% 보송보송 침구 SET
+									<span><em>68,000</em><span>원</span></span>
+								</p>
+							</figcaption>
+						</figure>
+					</div>
+					<div class="new_item">
+						<figure>	
+								<img src="img/new_item_03.jpeg" alt="알러지케어 항균 차렵이불/패드">
+							<figcaption>
+								<p>
+									<strong>[수면공감] 알러지케어 항균 차렵이불/패드 Silky</strong><br>
+									먼지·진드기 걱정 잠재워줄<br>
+									항균 99.9% 바스락 침구 SET
+									<span><em>78,000</em><span>원</span></span>
+								</p>
+							</figcaption>
+						</figure>
+					</div>
+					<div class="new_item">
+						<figure>	
+								<img src="img/new_item_04.jpeg" alt="알러지케어 항균 차렵이불/패드">
+							<figcaption>
+								<p>
+									<strong>[수면공감] 사이베개</strong><br>
+									목, 허리, 다리 통증 사이에<br>
+									개운함이 다른 스트레칭 베개
+									<span><em>29,000</em><span>원</span></span>
+								</p>
+							</figcaption>
+						</figure>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--//new end-->
+
 
 <!--script-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
